--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,8 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+
+# To invoke tasks in console
+Rails.application.load_tasks
+Rake::Task['url_checker_task'].invoke
